# linxira-bio-sdk

./: .gitignore  AGENTS.md  Cargo.toml  README.md  THIRD_PARTY.md  deny.toml  requirements-ci.txt  skill-pack.json
.github/workflows/: ci.yml
apps/linxira-bio-ui/: Cargo.toml
apps/linxira-bio-ui/src/: main.rs
capabilities/: catalog.json
docs/: AI_AND_SDK.md  ARCHITECTURE.md  CAPABILITY_ROADMAP.md  DATA_FORMATS.md  DOCUMENTATION_POLICY.md  EXECUTION_POLICY.md  PROJECT_CHARTER.md  RUNTIME_MANAGEMENT.md  TOOLCHAIN.md  WORKFLOW_PACKS.md
docs/capabilities/dataset.inspect.v1/: en-US.md  zh-CN.md
docs/capabilities/environment.audit.v1/: en-US.md  zh-CN.md
docs/capabilities/environment.plan.v1/: en-US.md  zh-CN.md
docs/capabilities/fastq.qc.v1/: en-US.md  zh-CN.md
docs/capabilities/runtime.catalog.v1/: en-US.md  zh-CN.md
docs/capabilities/sequence.stats.v1/: en-US.md  zh-CN.md
docs/capabilities/system.doctor.v1/: en-US.md  zh-CN.md
docs/capabilities/system.worker.v1/: en-US.md  zh-CN.md
docs/capabilities/table.export.v1/: en-US.md  zh-CN.md
docs/capabilities/variant.stats.v1/: en-US.md  zh-CN.md
engine/cpp/: README.md
engine/crates/linxira-bio-cli/: Cargo.toml
engine/crates/linxira-bio-cli/src/: main.rs
engine/crates/linxira-bio-cli/tests/: cli.rs
engine/crates/linxira-bio-core/: Cargo.toml
engine/crates/linxira-bio-core/src/: dataset.rs  environment.rs  fastq.rs  lib.rs  runtime.rs  sequence.rs  variant.rs
engine/crates/linxira-bio-export/: Cargo.toml
engine/crates/linxira-bio-export/src/: lib.rs
engine/crates/linxira-bio-protocol/: Cargo.toml
engine/crates/linxira-bio-protocol/src/: lib.rs
engine/crates/linxira-bio-worker/: Cargo.toml
engine/crates/linxira-bio-worker/src/: lib.rs  main.rs
engine/crates/linxira-bio-worker/tests/: worker.rs
licenses/: NotoSansCJK-OFL.txt
packaging/: bundle-manifest.json
profiles/: local-core.json
runtimes/: catalog.json
schemas/: analysis-result-v2.schema.json  analysis-result.schema.json  artifact.schema.json  bundle-manifest.schema.json  capability.schema.json  dataset-manifest.schema.json  environment-plan.schema.json  job-request-v2.schema.json  job-request.schema.json  runtime-catalog.schema.json  runtime-lock.schema.json  tool-catalog.schema.json  workflow-pack-catalog.schema.json  workflow-pack-manifest.schema.json
scripts/: stage-release.py  test-windows-gnu.ps1  validate-repository.py
skills/analyze-fastq-quality/: SKILL.md
skills/analyze-fastq-quality/agents/: openai.yaml
skills/analyze-sequence-statistics/: SKILL.md
skills/analyze-sequence-statistics/agents/: openai.yaml
skills/analyze-variant-statistics/: SKILL.md
skills/analyze-variant-statistics/agents/: openai.yaml
skills/configure-bio-environment/: SKILL.md
skills/configure-bio-environment/agents/: openai.yaml
skills/export-bio-table/: SKILL.md
skills/export-bio-table/agents/: openai.yaml
skills/inspect-bio-dataset/: SKILL.md
skills/inspect-bio-dataset/agents/: openai.yaml
skills/route-bio-analysis/: SKILL.md
skills/route-bio-analysis/agents/: openai.yaml
skills/select-bio-execution/: SKILL.md
skills/select-bio-execution/agents/: openai.yaml
tests/fixtures/data-inspection/: alignments.sam  annotations.gff3  matrix.tsv  reads.fastq  regions.bed  sequences.fa  structure.cif  table.csv  transcripts.gtf  variants.vcf
tests/fixtures/fastq-qc/: length-mismatch.fastq  truncated.fastq  valid.fastq  wrapped.fastq
tests/fixtures/jobs/: dataset-inspect-v2.json  dataset-inspect.json  fastq-qc.json  sequence-stats.json  table-export.json  variant-stats.json
tests/fixtures/results/: dataset-inspect-v2.json  metrics.json
tests/fixtures/schema-validation/: formats.json
tests/fixtures/sequences/: tiny.fa
tests/fixtures/variant-stats/: malformed-columns.vcf  mixed.vcf
tools/: catalog.json
workflows/: catalog.json
