[workspace]
members = [
    "apps/linxira-bio-ui",
    "engine/crates/linxira-bio-cli",
    "engine/crates/linxira-bio-core",
    "engine/crates/linxira-bio-export",
    "engine/crates/linxira-bio-protocol",
    "engine/crates/linxira-bio-worker",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Linxira-OS/linxira-bio-sdk"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
