[package]
name = "linxira-bio-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "linxira-bio-ui"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.35.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "wayland",
    "wgpu",
    "x11",
] }
linxira-bio-protocol = { version = "0.1.0", path = "../../engine/crates/linxira-bio-protocol" }
linxira-bio-export = { version = "0.1.0", path = "../../engine/crates/linxira-bio-export" }
linxira-bio-worker = { version = "0.1.0", path = "../../engine/crates/linxira-bio-worker" }
rfd = { version = "0.15.4", default-features = false, features = [
    "async-std",
    "xdg-portal",
] }
serde.workspace = true
serde_json.workspace = true
