[package]
name = "linxira-bio-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "linxira-bio"
path = "src/main.rs"

[dependencies]
linxira-bio-core = { version = "0.1.0", path = "../linxira-bio-core" }
linxira-bio-protocol = { version = "0.1.0", path = "../linxira-bio-protocol" }
serde.workspace = true
serde_json.workspace = true
